--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
         <!--<service android:name=".UserActivityJobService"
             android:permission="android.permission.BIND_JOB_SERVICE"/>-->
         <receiver android:name=".ActivityBroadcastReceiver" />
+        <receiver android:name=".AlarmReceiver" />
 
 
         <!--
