--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,9 @@
     <application
         android:name=".FirebaseHandler"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/fingerprint_ic"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_fingerprint"
+        android:roundIcon="@mipmap/fingerprint_ic"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -71,7 +71,6 @@
         <receiver android:name=".LockScreenReceiver" />
 
 
-        <activity android:name=".FinalSurvey" />
         <activity
             android:name=".InitialSurvey"
             android:exported="true" />
