--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,8 @@
             android:name=".UserActivityJobIntentService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
+        <service android:name=".LockscreenService"/>
+
         <receiver android:name=".ActivityBroadcastReceiver" />
         <receiver
             android:name=".RandomAlarmReceiver"
