--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,14 +65,19 @@
         <service android:name=".LockscreenService"/>
 
         <receiver android:name=".ActivityBroadcastReceiver" />
-        <receiver
-            android:name=".RandomAlarmReceiver"
+
+        <receiver android:name=".DeviceRebootReceiver"
             android:directBootAware="true"
             android:enabled="true"
-            android:exported="true"> <!-- android:directBootAware="true" android:enabled="true" android:exported="true -->
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".RandomAlarmReceiver"> <!-- android:directBootAware="true" android:enabled="true" android:exported="true -->
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
         <receiver android:name=".LockscreenHelper">
@@ -82,7 +87,7 @@
         </receiver>
         <receiver android:name=".AlarmReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
         <receiver android:name=".ExportDBHelper" />
